     
  o  The output of tables() now includes NCOL. Thanks to @dnlbrky for the suggestion.

  o  DT[, LHS := RHS] (or its equivalent in `set`) now provides a warning and returns DT as it was, instead 
     of an error, when `length(LHS) = 0L`. Ex: DT[, grep("^b", names(DT)) := NULL] where no columns start 
     with 'b'. Thanks to @eddi for filing the report. Closes #5357.

BUG FIXES

  o  When joining to fewer columns than the key has, using one of the later key columns
     explicitly in j repeated the first value. A problem introduced by v1.9.2 and not
     caught by our 1,220 tests, or tests in 37 dependent packages. Test added. Many
     thanks to Michele Carriero for reporting.
       DT = data.table(a=1:2, b=letters[1:6], key="a,b")    # keyed by a and b
       DT[.(1), list(b,...)]    # correct result again (joining just to a not b but using b)

  o  setkey works again when a non-key column is type list (e.g. each cell can itself be a
     vector), #5366. Test added. Thanks to James Sams, Michael Nelson and Musx for the
     reproducible examples.
       http://stackoverflow.com/questions/22186798/r-data-table-1-9-2-issue-on-setkey

  o  The warning "internal TRUE value has been modified" with recently released R 3.1
     when grouping a table containing a logical column and where all groups are just 1 row
     is now fixed and tests added. Thanks to James Sams for the reproducible example.
     The warning is issued by R and we have asked if it can be upgraded to error.

  o  data.table(list()), data.table(data.table()) and data.table(data.frame()) now return
     a null data.table (no columns) rather than one empty column, #5377. Test added. 
     Thanks to Shubh Bansal for reporting.

  o  unique(NULL data.table) returns a null data.table, #5405. Thanks to agstudy for reporting.

  o  data.table(.) converted POSIXlt to POSIXct, consistent with base:::data.frame(.), but now
     also provides a helpful warning instead of coercing silently, #5321.